Forgot to save...

--- a/ShoppingCard.Tests/ShoppingCard.Tests.csproj
+++ b/ShoppingCard.Tests/ShoppingCard.Tests.csproj
@@ -20,6 +20,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\ShoppingCard.Messages\ShoppingCard.Messages.csproj" />
     <ProjectReference Include="..\ShoppingCard\ShoppingCard.csproj" />
   </ItemGroup>
 
