--- a/ShoppingCard/ShoppingCard.csproj
+++ b/ShoppingCard/ShoppingCard.csproj
@@ -5,4 +5,8 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ShoppingCard.Messages\ShoppingCard.Messages.csproj" />
+  </ItemGroup>
+
 </Project>
