--- a/ShoppingCart.Core/ShoppingCart.Core.csproj
+++ b/ShoppingCart.Core/ShoppingCart.Core.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\ShoppingCard.Messages\ShoppingCard.Messages.csproj" />
+    <ProjectReference Include="..\ShoppingCart.Messages\ShoppingCart.Messages.csproj" />
   </ItemGroup>
 
 </Project>
